exp1 for upload testing

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ibus-keymagic (1.4.1~exp1) unstable; urgency=medium
+ibus-keymagic (1.4-1~exp1) unstable; urgency=medium
 
   * close ITP closes: #948262.
 
